2767 [L-SMASH Indexer]      fixed some issues (regression of 2757)
2766 [OneClick]             fixed an issue if the input audio codec cannot be used for direct muxing (regression of 2759). bug #890
2765 [Video Preview]        aligned the total time and frame count in the title bar with the Info() output
2764 [OneClick]             fixed external audio file handling (regression of 2759). bug #889
2763 [Audio Encoder]        ignore a requested sample rate change if source and target are identical
2762 [Audio Encoder]        fixed "NicAudio" not being saved as preferred decoder (regression of 2693)
2761 [OneClick] + [AVS SC]  select AviSource() or DirectShowSource() only if suitable
2760 [OneClick]             cosmetics
2759 [OneClick]             improved handling of audio tracks:
                            - FLAC encodings use the HD track instead of the core if possible. Feature request #610
                            - fixed demux of multiple audio tracks using the same input track (eac3to only)
                            - fixed handling of TrueHD+AC3 tracks if using an intermediate MKV file
2758 [Muxer]                removed dtshd and dtsma file extension and added eac3 and thd+ac3 file extension where suitable
     [MediaInfo]            improved audio codec/type detection
2757 [L-SMASH Indexer]      improved error handling
2756 [Chapter]              added a workaround for MediaInfo sometimes not detecting all chapters in MPLS files (regression of 2753)
2755 [AutoEncode]           fixed a crash if trying to add additional content (regression of 2753)
                            improved logging
2754 [MKV Info]             switched to the JSON format as the old switch is deprecated (requires mkvmerge 9.7+) 
2753 [Chapter]              improved chapter handling
                            all MediaInfo supported files and TXT/XML files can be used as chapter files